--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^14.6.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "fast-xml-parser": "^3.19.0",
     "gsap": "^3.6.1",
     "react-dom": "^16.13.1"
   }
